syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.proto.bully";
option java_outer_classname = "BullyProto";

service BullyService {
  rpc VerificarAtividade(BullyRequest) returns (BullyResponse);
}

message BullyRequest {
  string mensagem = 1;
}

message BullyResponse {
  string mensagem = 1;
}